--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,15 @@
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.leanxcale.connectors</groupId>
+			<artifactId>hibernate-connector</artifactId>
+			<version>1.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
