--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,15 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>${project.basedir}/src/main/resources</directory>
+				<filtering>true</filtering>
+				<includes>
+					<include>**/*.graphqls</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 
 </project>
